--- a/config/content.htm
+++ b/config/content.htm
@@ -58,7 +58,101 @@
 <h2>HW 3 Exam</h2>
 <p>每六人為一組進行協同程式練習</p>
 <p>透過 Jupyterlab 協同網頁, 輪流指定各組編寫 HW 3 相關的程式練習, 以及網頁內容 (localhost 與 Codespaces 環境)編輯.</p>
-<h1>HW 4</h1>
+<h3>w7</h3>
+<p>1.基本金字塔</p>
+<pre class="brush:py;auto-links:false;toolbar:false" contenteditable="false">for i in range(1, 6):
+print(' ' * (5 - i) + '*' * (2 * i - 1))</pre>
+<p><br/><br/></p>
+<p>2.反向金字塔</p>
+<pre class="brush:py;auto-links:false;toolbar:false" contenteditable="false">for i in range(5, 0, -1):
+print(' ' * (5 - i) + '*' * (2 * i - 1))</pre>
+<p><br/><br/></p>
+<p>3.用函數生成金字塔</p>
+<pre class="brush:py;auto-links:false;toolbar:false" contenteditable="false">def print_pyramid(n):
+for i in range(1, n + 1):
+print(' ' * (n - i) + '*' * (2 * i - 1))
+
+print_pyramid(5)</pre>
+<p><br/><br/></p>
+<p>4.用 <code>while</code> 迴圈</p>
+<pre class="brush:py;auto-links:false;toolbar:false" contenteditable="false">i = 1
+while i &lt;= 5:
+print(' ' * (5 - i) + '*' * (2 * i - 1))
+i += 1</pre>
+<p><br/><br/></p>
+<p>5.用 <code>input</code> 來決定層數</p>
+<pre class="brush:py;auto-links:false;toolbar:false" contenteditable="false">n = int(input("請輸入金字塔的層數: "))
+for i in range(1, n + 1):
+print(' ' * (n - i) + '*' * (2 * i - 1))</pre>
+<p><br/><br/></p>
+<p>6.用列表生成金字塔</p>
+<pre class="brush:py;auto-links:false;toolbar:false" contenteditable="false">pyramid = [' ' * (5 - i) + '*' * (2 * i - 1) for i in range(1, 6)]
+print('\n'.join(pyramid))</pre>
+<p><br/><br/></p>
+<p>7.用格式化字串</p>
+<pre class="brush:py;auto-links:false;toolbar:false" contenteditable="false">for i in range(1, 6):
+print(f"{' ' * (5 - i)}{'*' * (2 * i - 1)}")</pre>
+<p><br/><br/></p>
+<p>8.用 <code>format</code> 方法</p>
+<pre class="brush:py;auto-links:false;toolbar:false" contenteditable="false">for i in range(1, 6):
+print('{}{}'.format(' ' * (5 - i), '*' * (2 * i - 1)))</pre>
+<p><br/><br/></p>
+<p>9.用 <code>map</code> 和 <code>lambda</code></p>
+<pre class="brush:py;auto-links:false;toolbar:false" contenteditable="false">list(map(lambda i: print(' ' * (5 - i) + '*' * (2 * i - 1)), range(1, 6)))</pre>
+<p><br/><br/></p>
+<p>10.用 <code>str.ljust</code> 方法</p>
+<pre class="brush:py;auto-links:false;toolbar:false" contenteditable="false">for i in range(1, 6):
+print(('*' * (2 * i - 1)).center(9))</pre>
+<p><br/><br/></p>
+<p>11.用 <code>print</code> 的結構化</p>
+<pre class="brush:py;auto-links:false;toolbar:false" contenteditable="false">for i in range(1, 6):
+print(' ' * (5 - i), end='')
+print('*' * (2 * i - 1))</pre>
+<p><br/><br/></p>
+<p>12.將星號換成其他字符</p>
+<pre class="brush:py;auto-links:false;toolbar:false" contenteditable="false">char = '#'
+for i in range(1, 6):
+print(' ' * (5 - i) + char * (2 * i - 1))</pre>
+<p><br/><br/></p>
+<p>13.使用隨機字符</p>
+<pre class="brush:py;auto-links:false;toolbar:false" contenteditable="false">import random
+char = random.choice(['*', '#', '@', '%'])
+for i in range(1, 6):
+print(' ' * (5 - i) + char * (2 * i - 1))</pre>
+<p><br/><br/></p>
+<p>14.用 <code>str.repeat</code> 方法</p>
+<pre class="brush:py;auto-links:false;toolbar:false" contenteditable="false">for i in range(1, 6):
+print(' ' * (5 - i) + '*' * (2 * i - 1))</pre>
+<p><br/><br/></p>
+<p>15.使用 <code>collections</code> 生成金字塔</p>
+<pre class="brush:py;auto-links:false;toolbar:false" contenteditable="false">from collections import deque
+for i in range(1, 6):
+line = deque([' '] * (5 - i) + ['*'] * (2 * i - 1))
+print(''.join(line))</pre>
+<p><br/><br/></p>
+<p>16.用 <code>numpy</code> 生成金字塔（假設已安裝 numpy）</p>
+<pre class="brush:py;auto-links:false;toolbar:false" contenteditable="false">import numpy as np
+for i in range(1, 6):
+arr = np.array([' '] * (5 - i) + ['*'] * (2 * i - 1))
+print(''.join(arr))</pre>
+<p><br/><br/></p>
+<p>17.用 <code>string</code> 模組生成金字塔</p>
+<pre class="brush:py;auto-links:false;toolbar:false" contenteditable="false">import string
+for i in range(1, 6):
+print(' ' * (5 - i) + string.ascii_letters[0] * (2 * i - 1))</pre>
+<p><br/><br/></p>
+<p>18.用 <code>enumerate</code> 簡化</p>
+<pre class="brush:py;auto-links:false;toolbar:false" contenteditable="false">for i in range(5):
+print(' ' * (4 - i) + '*' * (2 * i + 1))</pre>
+<p><br/><br/></p>
+<p>19.用 <code>zip</code> 生成金字塔</p>
+<pre class="brush:py;auto-links:false;toolbar:false" contenteditable="false">for i, spaces in zip(range(1, 6), [' ' * (5 - i) for i in range(5)]):
+print(spaces + '*' * (2 * i - 1))</pre>
+<p><br/><br/></p>
+<p>20.最簡單的版本（不需要變數）</p>
+<pre class="brush:py;auto-links:false;toolbar:false" contenteditable="false">for i in range(1, 6):
+print(' ' * (5 - i) + '*' * (2 * i - 1))</pre>
+<p><br/><br/></p><h1>HW 4</h1>
 <h4>主題: 利用 Python 控制機電模擬系統 (20%)</h4>
 <p style="padding-left: 30px;">利用 <a href="https://solvespace.com/">https://solvespace.com/</a> 建立機械系統零組件</p>
 <p style="padding-left: 30px;">利用 <a href="https://www.coppeliarobotics.com/">CoppeliaSim</a> 建立機電模擬系統</p>
