--- a/config/content_backup.htm
+++ b/config/content_backup.htm
@@ -8,9 +8,10 @@
 <p style="padding-left: 30px;">教育版帳號 microsoftonline 登入點: <a href="https://login.microsoftonline.com/">https://login.microsoftonline.com/</a></p>
 <p>Teams 線上教學:</p>
 <p style="padding-left: 30px;">以 "學號@nfu.edu.tw" 登入 <a href="https://login.microsoftonline.com/">https://login.microsoftonline.com/</a> Office 365</p>
-<p style="padding-left: 30px;">Teams 團隊代碼: <span class="fui-Text ___vec8h90 fk6fouc f1pbo8a8 f1i3iumi figsok6 fpgzoln f1w7gpdv f6juhto f1mtd64y f1y7q3j9 f2jf649 foxqkq2" data-tid="join-team-code" mce-data-marked="1">fqpabi8</span></p>
-<p>個人倉儲:</p>
+<p style="padding-left: 30px;">Teams 團隊代碼: <span class="fui-Text ___vec8h90 fk6fouc f1pbo8a8 f1i3iumi figsok6 fpgzoln f1w7gpdv f6juhto f1mtd64y f1y7q3j9 f2jf649 foxqkq2" data-tid="join-team-code">fqpabi8</span></p>
+<p>個人倉儲:<a href="https://github.com/mdecp2024/hw-41323204">https://github.com/mdecp2024/hw-41323204</a></p>
 <p>個人網站:<span><a href="https://mdecp2024.github.io/hw-41323204">https://mdecp2024.github.io/hw-41323204</a></span></p>
+<p><span></span></p>
 <p><span></span></p>
 <p>其他資訊:</p>
 <p style="padding-left: 30px;"><a href="/downloads/cd2023_pj3ag4_zmq_football_4.7.7z">cd2023_pj3ag4_zmq_football_4.7.7z</a></p>
@@ -57,7 +58,48 @@
 <h2>HW 3 Exam</h2>
 <p>每六人為一組進行協同程式練習</p>
 <p>透過 Jupyterlab 協同網頁, 輪流指定各組編寫 HW 3 相關的程式練習, 以及網頁內容 (localhost 與 Codespaces 環境)編輯.</p>
-<h1>HW 4</h1>
+<h3>w7</h3>
+<p>1.基本金字塔</p>
+<p>for i in range(1, 6):<br/> print(' ' * (5 - i) + '*' * (2 * i - 1))</p>
+<p>2.反向金字塔</p>
+<p>for i in range(5, 0, -1):<br/> print(' ' * (5 - i) + '*' * (2 * i - 1))</p>
+<p>3.用函數生成金字塔</p>
+<p>def print_pyramid(n):<br/> for i in range(1, n + 1):<br/> print(' ' * (n - i) + '*' * (2 * i - 1))</p>
+<p>print_pyramid(5)</p>
+<p>4.用 <code>while</code> 迴圈</p>
+<p>i = 1<br/>while i &lt;= 5:<br/> print(' ' * (5 - i) + '*' * (2 * i - 1))<br/> i += 1</p>
+<p>5.用 <code>input</code> 來決定層數</p>
+<p>n = int(input("請輸入金字塔的層數: "))<br/>for i in range(1, n + 1):<br/> print(' ' * (n - i) + '*' * (2 * i - 1))</p>
+<p>6.用列表生成金字塔</p>
+<p>pyramid = [' ' * (5 - i) + '*' * (2 * i - 1) for i in range(1, 6)]<br/>print('\n'.join(pyramid))</p>
+<p>7.用格式化字串</p>
+<p>for i in range(1, 6):<br/> print(f"{' ' * (5 - i)}{'*' * (2 * i - 1)}")</p>
+<p>8.用 <code>format</code> 方法</p>
+<p>for i in range(1, 6):<br/> print('{}{}'.format(' ' * (5 - i), '*' * (2 * i - 1)))</p>
+<p>9.用 <code>map</code> 和 <code>lambda</code></p>
+<p>list(map(lambda i: print(' ' * (5 - i) + '*' * (2 * i - 1)), range(1, 6)))</p>
+<p>10.用 <code>str.ljust</code> 方法</p>
+<p>for i in range(1, 6):<br/> print(('*' * (2 * i - 1)).center(9))</p>
+<p>11.用 <code>print</code> 的結構化</p>
+<p>for i in range(1, 6):<br/> print(' ' * (5 - i), end='')<br/> print('*' * (2 * i - 1))</p>
+<p>12.將星號換成其他字符</p>
+<p>char = '#'<br/>for i in range(1, 6):<br/> print(' ' * (5 - i) + char * (2 * i - 1))</p>
+<p>13.使用隨機字符</p>
+<p>import random<br/>char = random.choice(['*', '#', '@', '%'])<br/>for i in range(1, 6):<br/> print(' ' * (5 - i) + char * (2 * i - 1))</p>
+<p>14.用 <code>str.repeat</code> 方法</p>
+<p>for i in range(1, 6):<br/> print(' ' * (5 - i) + '*' * (2 * i - 1))</p>
+<p>15.使用 <code>collections</code> 生成金字塔</p>
+<p>from collections import deque<br/>for i in range(1, 6):<br/> line = deque([' '] * (5 - i) + ['*'] * (2 * i - 1))<br/> print(''.join(line))</p>
+<p>16.用 <code>numpy</code> 生成金字塔（假設已安裝 numpy）</p>
+<p>import numpy as np<br/>for i in range(1, 6):<br/> arr = np.array([' '] * (5 - i) + ['*'] * (2 * i - 1))<br/> print(''.join(arr))</p>
+<p>17.用 <code>string</code> 模組生成金字塔</p>
+<p>import string<br/>for i in range(1, 6):<br/> print(' ' * (5 - i) + string.ascii_letters[0] * (2 * i - 1))</p>
+<p>18.用 <code>enumerate</code> 簡化</p>
+<p>for i in range(5):<br/> print(' ' * (4 - i) + '*' * (2 * i + 1))</p>
+<p>19.用 <code>zip</code> 生成金字塔</p>
+<p>for i, spaces in zip(range(1, 6), [' ' * (5 - i) for i in range(5)]):<br/> print(spaces + '*' * (2 * i - 1))</p>
+<p>20.最簡單的版本（不需要變數）</p>
+<p>for i in range(1, 6):<br/> print(' ' * (5 - i) + '*' * (2 * i - 1))</p><h1>HW 4</h1>
 <h4>主題: 利用 Python 控制機電模擬系統 (20%)</h4>
 <p style="padding-left: 30px;">利用 <a href="https://solvespace.com/">https://solvespace.com/</a> 建立機械系統零組件</p>
 <p style="padding-left: 30px;">利用 <a href="https://www.coppeliarobotics.com/">CoppeliaSim</a> 建立機電模擬系統</p>
