--- a/content/w7.html
+++ b/content/w7.html
@@ -130,7 +130,7 @@ img.add_border {
                             <li><a href="./../blog/index.html">blog</a></li>
                         </ul>
                       </li>
-                     <li><a href='About.html'>About</a><li><a href='Attendance.html'>Attendance</a><li class='has-children'><a href='HW 1.html'>HW 1</a><ul class='dropdown'><li><a href='HW 1 Exam.html'>HW 1 Exam</a></li></ul><li class='has-children'><a href='HW 2.html'>HW 2</a><ul class='dropdown'><li><a href='HW 2 Exam.html'>HW 2 Exam</a></li></ul><li class='has-children'><a href='HW 3.html'>HW 3</a><ul class='dropdown'><li class='has-children'><a href='HW 3 Exam.html'>HW 3 Exam</a><ul class='dropdown'><li><a href='w7.html'>w7</a></li></li></ul></ul><li class='has-children'><a href='HW 4.html'>HW 4</a><ul class='dropdown'><li><a href='HW 4 Exam.html'>HW 4 Exam</a></li></ul><li><a href='Final Report.html'>Final Report</a></li>
+                     <li><a href='About.html'>About</a><li><a href='Attendance.html'>Attendance</a><li class='has-children'><a href='HW 1.html'>HW 1</a><ul class='dropdown'><li><a href='HW 1 Exam.html'>HW 1 Exam</a></li></ul><li class='has-children'><a href='HW 2.html'>HW 2</a><ul class='dropdown'><li><a href='HW 2 Exam.html'>HW 2 Exam</a></li></ul><li class='has-children'><a href='HW 3.html'>HW 3</a><ul class='dropdown'><li class='has-children'><a href='HW 3 Exam.html'>HW 3 Exam</a><ul class='dropdown'><li><a href='w8.html'>w8</a><li><a href='w7.html'>w7</a></li></li></ul></ul><li class='has-children'><a href='HW 4.html'>HW 4</a><ul class='dropdown'><li><a href='HW 4 Exam.html'>HW 4 Exam</a></li></ul><li><a href='Final Report.html'>Final Report</a></li>
                       </ul>
                 </nav>
               </div>
@@ -141,7 +141,7 @@ img.add_border {
           </div>
           
         </header>
-    <div id="tipue_search_content">HW 3 Exam << <a href='HW 3 Exam.html'>Previous</a> <a href='HW 4.html'>Next</a> >> HW 4<br /><h1>w7</h1>
+    <div id="tipue_search_content">w8 << <a href='w8.html'>Previous</a> <a href='HW 4.html'>Next</a> >> HW 4<br /><h1>w7</h1>
 <p>1.基本金字塔</p>
 <pre class="brush:py;auto-links:false;toolbar:false" contenteditable="false">for i in range(1, 6):
 print(' ' * (5 - i) + '*' * (2 * i - 1))</pre>
@@ -235,7 +235,8 @@ print(spaces + '*' * (2 * i - 1))</pre>
 <p>20.最簡單的版本（不需要變數）</p>
 <pre class="brush:py;auto-links:false;toolbar:false" contenteditable="false">for i in range(1, 6):
 print(' ' * (5 - i) + '*' * (2 * i - 1))</pre>
-<p><br/><br/></p><br />HW 3 Exam << <a href='HW 3 Exam.html'>Previous</a> <a href='HW 4.html'>Next</a> >> HW 4</div>
+<p><br/><br/></p>
+<br />w8 << <a href='w8.html'>Previous</a> <a href='HW 4.html'>Next</a> >> HW 4</div>
         
     <!-- footer -->
       <div class="container">
