--- a/content/w7-1.html
+++ b/content/w7-1.html
@@ -130,7 +130,7 @@ img.add_border {
                             <li><a href="./../blog/index.html">blog</a></li>
                         </ul>
                       </li>
-                     <li><a href='About.html'>About</a><li><a href='Attendance.html'>Attendance</a><li class='has-children'><a href='HW 1.html'>HW 1</a><ul class='dropdown'><li><a href='HW 1 Exam.html'>HW 1 Exam</a></li></ul><li class='has-children'><a href='HW 2.html'>HW 2</a><ul class='dropdown'><li><a href='HW 2 Exam.html'>HW 2 Exam</a></li></ul><li class='has-children'><a href='HW 3.html'>HW 3</a><ul class='dropdown'><li class='has-children'><a href='HW 3 Exam.html'>HW 3 Exam</a><ul class='dropdown'><li><a href='w8.html'>w8</a><li><a href='w7.html'>w7</a></li></li></ul></ul><li class='has-children'><a href='HW 4.html'>HW 4</a><ul class='dropdown'><li><a href='HW 4 Exam.html'>HW 4 Exam</a></li></ul><li><a href='Final Report.html'>Final Report</a></li>
+                     <li><a href='About.html'>About</a><li><a href='Attendance.html'>Attendance</a><li class='has-children'><a href='HW 1.html'>HW 1</a><ul class='dropdown'><li class='has-children'><a href='HW 1 Exam.html'>HW 1 Exam</a><ul class='dropdown'><li><a href='w7-1.html'>w7-1</a></li></li></ul></ul><li class='has-children'><a href='HW 2.html'>HW 2</a><ul class='dropdown'><li><a href='HW 2 Exam.html'>HW 2 Exam</a></li></ul><li class='has-children'><a href='HW 3.html'>HW 3</a><ul class='dropdown'><li class='has-children'><a href='HW 3 Exam.html'>HW 3 Exam</a><ul class='dropdown'><li><a href='w8.html'>w8</a><li><a href='w7-2.html'>w7-2</a></li></li></ul></ul><li class='has-children'><a href='HW 4.html'>HW 4</a><ul class='dropdown'><li><a href='HW 4 Exam.html'>HW 4 Exam</a></li></ul><li><a href='Final Report.html'>Final Report</a><li><a href='Brython.html'>Brython</a></li>
                       </ul>
                 </nav>
               </div>
@@ -141,102 +141,12 @@ img.add_border {
           </div>
           
         </header>
-    <div id="tipue_search_content">w8 << <a href='w8.html'>Previous</a> <a href='HW 4.html'>Next</a> >> HW 4<br /><h1>w7</h1>
-<p>1.基本金字塔</p>
-<pre class="brush:py;auto-links:false;toolbar:false" contenteditable="false">for i in range(1, 6):
-print(' ' * (5 - i) + '*' * (2 * i - 1))</pre>
-<p><br/><br/></p>
-<p>2.反向金字塔</p>
-<pre class="brush:py;auto-links:false;toolbar:false" contenteditable="false">for i in range(5, 0, -1):
-print(' ' * (5 - i) + '*' * (2 * i - 1))</pre>
-<p><br/><br/></p>
-<p>3.用函數生成金字塔</p>
-<pre class="brush:py;auto-links:false;toolbar:false" contenteditable="false">def print_pyramid(n):
-for i in range(1, n + 1):
-print(' ' * (n - i) + '*' * (2 * i - 1))
-
-print_pyramid(5)</pre>
-<p><br/><br/></p>
-<p>4.用 <code>while</code> 迴圈</p>
-<pre class="brush:py;auto-links:false;toolbar:false" contenteditable="false">i = 1
-while i &lt;= 5:
-print(' ' * (5 - i) + '*' * (2 * i - 1))
-i += 1</pre>
-<p><br/><br/></p>
-<p>5.用 <code>input</code> 來決定層數</p>
-<pre class="brush:py;auto-links:false;toolbar:false" contenteditable="false">n = int(input("請輸入金字塔的層數: "))
-for i in range(1, n + 1):
-print(' ' * (n - i) + '*' * (2 * i - 1))</pre>
-<p><br/><br/></p>
-<p>6.用列表生成金字塔</p>
-<pre class="brush:py;auto-links:false;toolbar:false" contenteditable="false">pyramid = [' ' * (5 - i) + '*' * (2 * i - 1) for i in range(1, 6)]
-print('\n'.join(pyramid))</pre>
-<p><br/><br/></p>
-<p>7.用格式化字串</p>
-<pre class="brush:py;auto-links:false;toolbar:false" contenteditable="false">for i in range(1, 6):
-print(f"{' ' * (5 - i)}{'*' * (2 * i - 1)}")</pre>
-<p><br/><br/></p>
-<p>8.用 <code>format</code> 方法</p>
-<pre class="brush:py;auto-links:false;toolbar:false" contenteditable="false">for i in range(1, 6):
-print('{}{}'.format(' ' * (5 - i), '*' * (2 * i - 1)))</pre>
-<p><br/><br/></p>
-<p>9.用 <code>map</code> 和 <code>lambda</code></p>
-<pre class="brush:py;auto-links:false;toolbar:false" contenteditable="false">list(map(lambda i: print(' ' * (5 - i) + '*' * (2 * i - 1)), range(1, 6)))</pre>
-<p><br/><br/></p>
-<p>10.用 <code>str.ljust</code> 方法</p>
-<pre class="brush:py;auto-links:false;toolbar:false" contenteditable="false">for i in range(1, 6):
-print(('*' * (2 * i - 1)).center(9))</pre>
-<p><br/><br/></p>
-<p>11.用 <code>print</code> 的結構化</p>
-<pre class="brush:py;auto-links:false;toolbar:false" contenteditable="false">for i in range(1, 6):
-print(' ' * (5 - i), end='')
-print('*' * (2 * i - 1))</pre>
-<p><br/><br/></p>
-<p>12.將星號換成其他字符</p>
-<pre class="brush:py;auto-links:false;toolbar:false" contenteditable="false">char = '#'
-for i in range(1, 6):
-print(' ' * (5 - i) + char * (2 * i - 1))</pre>
-<p><br/><br/></p>
-<p>13.使用隨機字符</p>
-<pre class="brush:py;auto-links:false;toolbar:false" contenteditable="false">import random
-char = random.choice(['*', '#', '@', '%'])
-for i in range(1, 6):
-print(' ' * (5 - i) + char * (2 * i - 1))</pre>
-<p><br/><br/></p>
-<p>14.用 <code>str.repeat</code> 方法</p>
-<pre class="brush:py;auto-links:false;toolbar:false" contenteditable="false">for i in range(1, 6):
-print(' ' * (5 - i) + '*' * (2 * i - 1))</pre>
-<p><br/><br/></p>
-<p>15.使用 <code>collections</code> 生成金字塔</p>
-<pre class="brush:py;auto-links:false;toolbar:false" contenteditable="false">from collections import deque
-for i in range(1, 6):
-line = deque([' '] * (5 - i) + ['*'] * (2 * i - 1))
-print(''.join(line))</pre>
-<p><br/><br/></p>
-<p>16.用 <code>numpy</code> 生成金字塔（假設已安裝 numpy）</p>
-<pre class="brush:py;auto-links:false;toolbar:false" contenteditable="false">import numpy as np
-for i in range(1, 6):
-arr = np.array([' '] * (5 - i) + ['*'] * (2 * i - 1))
-print(''.join(arr))</pre>
-<p><br/><br/></p>
-<p>17.用 <code>string</code> 模組生成金字塔</p>
-<pre class="brush:py;auto-links:false;toolbar:false" contenteditable="false">import string
-for i in range(1, 6):
-print(' ' * (5 - i) + string.ascii_letters[0] * (2 * i - 1))</pre>
-<p><br/><br/></p>
-<p>18.用 <code>enumerate</code> 簡化</p>
-<pre class="brush:py;auto-links:false;toolbar:false" contenteditable="false">for i in range(5):
-print(' ' * (4 - i) + '*' * (2 * i + 1))</pre>
-<p><br/><br/></p>
-<p>19.用 <code>zip</code> 生成金字塔</p>
-<pre class="brush:py;auto-links:false;toolbar:false" contenteditable="false">for i, spaces in zip(range(1, 6), [' ' * (5 - i) for i in range(5)]):
-print(spaces + '*' * (2 * i - 1))</pre>
-<p><br/><br/></p>
-<p>20.最簡單的版本（不需要變數）</p>
-<pre class="brush:py;auto-links:false;toolbar:false" contenteditable="false">for i in range(1, 6):
-print(' ' * (5 - i) + '*' * (2 * i - 1))</pre>
-<p><br/><br/></p>
-<br />w8 << <a href='w8.html'>Previous</a> <a href='HW 4.html'>Next</a> >> HW 4</div>
+    <div id="tipue_search_content">HW 1 Exam << <a href='HW 1 Exam.html'>Previous</a> <a href='HW 2.html'>Next</a> >> HW 2<br /><h1>w7-1</h1>
+<p>建立Brython</p>
+<p><iframe allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen="allowfullscreen" frameborder="0" height="315" referrerpolicy="strict-origin-when-cross-origin" src="https://www.youtube.com/embed/uOAtHQAJ2cE?si=o5qq2HqmD2ir5CN9" title="YouTube video player" width="560"></iframe></p>
+<p>寫簡單程式</p>
+<p><iframe allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen="allowfullscreen" frameborder="0" height="315" referrerpolicy="strict-origin-when-cross-origin" src="https://www.youtube.com/embed/V3eqfrWsmqI?si=eJCf_-GLjD9x10k6" title="YouTube video player" width="560"></iframe></p>
+<br />HW 1 Exam << <a href='HW 1 Exam.html'>Previous</a> <a href='HW 2.html'>Next</a> >> HW 2</div>
         
     <!-- footer -->
       <div class="container">
