--- a/config/content_backup.htm
+++ b/config/content_backup.htm
@@ -45,7 +45,7 @@
 <p>建立Brython</p>
 <p><iframe allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen="allowfullscreen" frameborder="0" height="315" referrerpolicy="strict-origin-when-cross-origin" src="https://www.youtube.com/embed/uOAtHQAJ2cE?si=o5qq2HqmD2ir5CN9" title="YouTube video player" width="560"></iframe></p>
 <p>寫簡單程式</p>
-<p>123456</p><h1>HW 2</h1>
+<p><iframe allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen="allowfullscreen" frameborder="0" height="315" referrerpolicy="strict-origin-when-cross-origin" src="https://www.youtube.com/embed/V3eqfrWsmqI?si=eJCf_-GLjD9x10k6" title="YouTube video player" width="560"></iframe></p><h1>HW 2</h1>
 <h4>主題: Python 的數列、判斷式與重複迴圈 (20%)<span style="background-color: #ffff99;"><br/></span></h4>
 <p style="padding-left: 30px;">Python 課程教材: <a href="https://www.learnpythonwithjupyter.com/">https://www.learnpythonwithjupyter.com/</a> - PART 2 and Part 3</p>
 <hr/>
