--- a/content/w11.html
+++ b/content/w11.html
@@ -154,9 +154,9 @@ img.add_border {
 <p>第二題解答：“<a href="https://mdecp2024.github.io/hw-41323204/content/Brython.html?src=https://gist.githubusercontent.com/41323204/9c0099107110ebabaa5eec94f3f3b9e8/raw/94079fad8c89e95c85ad844f8851f486eed1c5df/hw11-2.py">格子圓</a>”</p>
 <p><a href="https://mde.tw/cp2024/content/Brython.html?src=https://gist.githubusercontent.com/mdecycu/5705fc2a67aa1db0c0d44d6d0478b08b/raw/f95909804a1f134963cade8463eeb9bd32129ea8/grid_line_and_fill_in_Brython.py">網頁上的方格與塗色</a></p>
 <p>3. 完成上列題目後, 請利用 Youtube 影片<span>簡報</span>個人的解題過程與心得.</p>
-<p>第一題：</p>
+<p>第一題解題過程：</p>
 <p><iframe allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen="allowfullscreen" frameborder="0" height="315" referrerpolicy="strict-origin-when-cross-origin" src="https://www.youtube.com/embed/S9Lho0gKjOA?si=RFRtWlNyqMRBG51l" title="YouTube video player" width="560"></iframe></p>
-<p>第二題：</p>
+<p>第二題解題過程：</p>
 <p><iframe allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen="allowfullscreen" frameborder="0" height="315" referrerpolicy="strict-origin-when-cross-origin" src="https://www.youtube.com/embed/S9Lho0gKjOA?si=RFRtWlNyqMRBG51l" title="YouTube video player" width="560"></iframe>/p&gt;</p><br />w7 << <a href='w7.html'>Previous</a> <a href='HW 2.html'>Next</a> >> HW 2</div>
         
     <!-- footer -->
