--- a/config/content_backup.htm
+++ b/config/content_backup.htm
@@ -66,6 +66,9 @@
 <p>11/27課堂練習1:"<a href="https://mdecp2024.github.io/hw-41323204/content/Brython.html?src=https://gist.githubusercontent.com/41323204/e7c106049c6e2022e165230b2479e0ba/raw/0c9483e40732b9f0aff437ae01d7a49ed83fc4a4/hw12-p">這裡</a>"</p><h3>w12</h3>
 <p><em>第一題：input()與 print()</em></p>
 <p><em>範例:<a href="https://mdecp2024.github.io/hw-41323204/content/Brython.html?src=https://gist.githubusercontent.com/41323204/df92358b984c289ab1758215f9496a12/raw/9b3cdafc23f4b2f5c869e20119829369e0cee787/hw12-1.py">你的名字</a></em></p>
+<p><em><span>    說明：input為輸入()中為問題,使用者輸入之答案會變成返回的值</span></em></p>
+<pre class="brush:py;auto-links:false;toolbar:false custom-cursor-default-hover" contenteditable="false">input("你叫什麼?")</pre>
+<p><em><span></span></em></p>
 <p></p><h1>HW 2</h1>
 <h4>主題: Python 的數列、判斷式與重複迴圈 (20%)<span style="background-color: #ffff99;"><br/></span></h4>
 <p style="padding-left: 30px;">Python 課程教材: <a href="https://www.learnpythonwithjupyter.com/">https://www.learnpythonwithjupyter.com/</a> - PART 2 and Part 3</p>
