--- a/content/w12.html
+++ b/content/w12.html
@@ -152,6 +152,13 @@ img.add_border {
 print (" &gt;^.^&lt;   ")
 print ("    / \    ")
 print ("   (___)___")</pre>
+<p><em>第二題：變數</em></p>
+<p><em><span>Q2-1範例程式：<a href="https://mdecp2024.github.io/hw-41323204/content/Brython.html?src=https://gist.githubusercontent.com/41323204/df92358b984c289ab1758215f9496a12/raw/582dc76390a1bff7585b4a79576497f671dce30d/hw12-2.py">姓名</a></span></em></p>
+<p><em><span>說明：設定變數後,可以使用列印指令,列印出不同變數</span></em></p>
+<pre class="brush:py;auto-links:false;toolbar:false custom-cursor-default-hover" contenteditable="false">first_name = "Huang" #變數first_name為"自己的姓"
+last_name  = "Yue-Ting" #變數last_name為"自己的名"
+print (first_name) #列印變數first_name
+print (last_name) #列印變數last_name</pre>
 <p></p><br />w11 << <a href='w11.html'>Previous</a> <a href='HW 2.html'>Next</a> >> HW 2</div>
         
     <!-- footer -->
