--- a/content/w12.html
+++ b/content/w12.html
@@ -159,7 +159,19 @@ print ("   (___)___")</pre>
 last_name  = "Yue-Ting" #變數last_name為"自己的名"
 print (first_name) #列印變數first_name
 print (last_name) #列印變數last_name</pre>
-<p></p><br />w11 << <a href='w11.html'>Previous</a> <a href='HW 2.html'>Next</a> >> HW 2</div>
+<p><em>第三題：if判斷式</em></p>
+<p><em><span>Q3範例程式：<a href="https://mdecp2024.github.io/hw-41323204/content/Brython.html?src=https://gist.githubusercontent.com/41323204/df92358b984c289ab1758215f9496a12/raw/1331175fe85a6ca4323254c3e29b5c7c550a1601/hw12-2-2.py">book store</a></span></em></p>
+<p><em><span>說明：使用if判斷式判斷使用者輸入之數值(文字)是否在字串當中</span></em></p>
+<pre class="brush:py;auto-links:false;toolbar:false custom-cursor-default-hover" contenteditable="false">programming_books = ["Learn python", "Python for all",  "Intro to python"] #在programming_books變數裡面有3個字串
+print (programming_books) #列印programming_books變數(會出現三個字串)
+wanted_book = input("Hi! What book would you like to buy?") #設定一個變數為wanted_book其等於input指令回傳之數值
+print (wanted_book) #列印wanted_book變數
+if wanted_book in programming_books: #如果 "變數wanted_book"回傳之值 在"programming_books"字串當中
+    print ("Yes, we sell it!")       #列印 是的我們有販賣
+else:                            #反之    
+    print ("Sorry, we don't sell that book") #列印 抱歉我們沒有販賣 </pre>
+<p><em><span></span></em></p>
+<p><em></em></p><br />w11 << <a href='w11.html'>Previous</a> <a href='HW 2.html'>Next</a> >> HW 2</div>
         
     <!-- footer -->
       <div class="container">
