--- a/config/content_backup.htm
+++ b/config/content_backup.htm
@@ -74,6 +74,13 @@
 print (" &gt;^.^&lt;   ")
 print ("    / \    ")
 print ("   (___)___")</pre>
+<p><em>第二題：變數</em></p>
+<p><em><span>Q2-1範例程式：<a href="https://mdecp2024.github.io/hw-41323204/content/Brython.html?src=https://gist.githubusercontent.com/41323204/df92358b984c289ab1758215f9496a12/raw/582dc76390a1bff7585b4a79576497f671dce30d/hw12-2.py">姓名</a></span></em></p>
+<p><em><span>說明：設定變數後,可以使用列印指令,列印出不同變數</span></em></p>
+<pre class="brush:py;auto-links:false;toolbar:false custom-cursor-default-hover" contenteditable="false">first_name = "Huang" #變數first_name為"自己的姓"
+last_name  = "Yue-Ting" #變數last_name為"自己的名"
+print (first_name) #列印變數first_name
+print (last_name) #列印變數last_name</pre>
 <p></p><h1>HW 2</h1>
 <h4>主題: Python 的數列、判斷式與重複迴圈 (20%)<span style="background-color: #ffff99;"><br/></span></h4>
 <p style="padding-left: 30px;">Python 課程教材: <a href="https://www.learnpythonwithjupyter.com/">https://www.learnpythonwithjupyter.com/</a> - PART 2 and Part 3</p>
