--- a/content/w12.html
+++ b/content/w12.html
@@ -159,6 +159,12 @@ print ("   (___)___")</pre>
 last_name  = "Yue-Ting" #變數last_name為"自己的名"
 print (first_name) #列印變數first_name
 print (last_name) #列印變數last_name</pre>
+<p><em><span>Q2-2範例程式：<a href="https://mdecp2024.github.io/hw-41323204/content/Brython.html?src=https://gist.githubusercontent.com/41323204/df92358b984c289ab1758215f9496a12/raw/ccbd84b3f67bdac10600e36283331de241f5ec00/hw12-3.py">名字+愛吃的食物</a></span></em></p>
+<pre class="brush:py;auto-links:false;toolbar:false custom-cursor-default-hover" contenteditable="false">name = input("What's your name?") #變數name為input所輸入之文字
+favorite_food = input ("What is your favorite food?") #變數favorite_food為input所輸入之文字
+print ("Hi! My name is " + name) #列印"Hi! My name is "(這段為文字) + name(name這個變數的數值)
+print ("My favorite food is " + favorite_food)  #列印"My favorite food is "(這段為文字) + favorite_food(favorite_food這個變數的數值)
+print (name + "'s favorite food is " + favorite_food) #列印name (數值)+ 's favorite food is (此段為文字)+favorite_food(數值)</pre>
 <p><em>第三題：if判斷式</em></p>
 <p><em><span>Q3範例程式：<a href="https://mdecp2024.github.io/hw-41323204/content/Brython.html?src=https://gist.githubusercontent.com/41323204/df92358b984c289ab1758215f9496a12/raw/1331175fe85a6ca4323254c3e29b5c7c550a1601/hw12-2-2.py">book store</a></span></em></p>
 <p><em><span>說明：使用if判斷式判斷使用者輸入之數值(文字)是否在字串當中</span></em></p>
