--- a/config/content.htm
+++ b/config/content.htm
@@ -63,7 +63,8 @@
 <p><iframe allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen="allowfullscreen" frameborder="0" height="315" referrerpolicy="strict-origin-when-cross-origin" src="https://www.youtube.com/embed/S9Lho0gKjOA?si=RFRtWlNyqMRBG51l" title="YouTube video player" width="560"></iframe></p>
 <p>第二題解題過程：</p>
 <p><iframe allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen="allowfullscreen" frameborder="0" height="315" referrerpolicy="strict-origin-when-cross-origin" src="https://www.youtube.com/embed/S9Lho0gKjOA?si=RFRtWlNyqMRBG51l" title="YouTube video player" width="560"></iframe></p>
-<p>11/27課堂練習1:"<a href="https://mdecp2024.github.io/hw-41323204/content/Brython.html?src=https://gist.githubusercontent.com/41323204/e7c106049c6e2022e165230b2479e0ba/raw/0c9483e40732b9f0aff437ae01d7a49ed83fc4a4/hw12-p">這裡</a>"</p><h3>w12</h3>
+<p>11/27課堂練習1:"<a href="https://mdecp2024.github.io/hw-41323204/content/Brython.html?src=https://gist.githubusercontent.com/41323204/e7c106049c6e2022e165230b2479e0ba/raw/0c9483e40732b9f0aff437ae01d7a49ed83fc4a4/hw12-p">這裡</a>"</p>
+<p>        課堂練習2:"<a href="https://mdecp2024.github.io/hw-41323204/content/Brython.html?src=https://gist.githubusercontent.com/41323204/5e29e17007686fe907a5851c8e71a4c1/raw/7518b66a6b9efdf6a0a3a2af277cde80a5eb8c8a/w11%25E6%25A3%258B%25E7%259B%25A4.py">棋盤</a>"</p><h3>w12</h3>
 <p><em>第一題：input()與 print()</em></p>
 <p><em>範例:<a href="https://mdecp2024.github.io/hw-41323204/content/Brython.html?src=https://gist.githubusercontent.com/41323204/df92358b984c289ab1758215f9496a12/raw/9b3cdafc23f4b2f5c869e20119829369e0cee787/hw12-1.py">你的名字</a></em></p>
 <p><em><span>    說明：input為輸入()中為問題,使用者輸入之答案會變成返回的值</span></em></p>
