--- a/content/w13.html
+++ b/content/w13.html
@@ -142,7 +142,7 @@ img.add_border {
           
         </header>
     <div id="tipue_search_content">w12 << <a href='w12.html'>Previous</a> <a href='HW 2.html'>Next</a> >> HW 2<br /><h1>w13</h1>
-<p>上課內容:<a href="https://mdecp2024.github.io/hw-41323204/content/Brython.html?src=https://gist.githubusercontent.com/41323204/cd3213c8d0dfe42054e216dc1641153f/raw/d7fdb516e9c62cacfc6b5c81acdd3473cd407676/w13%25E9%2587%258D%25E7%2596%258A%25E6%2596%25B9%25E5%25A1%258A.py">重疊方塊</a></p><br />w12 << <a href='w12.html'>Previous</a> <a href='HW 2.html'>Next</a> >> HW 2</div>
+<p>上課內容:<a href="https://mdecp2024.github.io/hw-41323204/content/Brython.html?src=https://gist.githubusercontent.com/41323204/cd3213c8d0dfe42054e216dc1641153f/raw/6eb75e7af190a5097b5bcc31bc80e06ee4a003e7/w13-2.py">重疊方塊</a></p><br />w12 << <a href='w12.html'>Previous</a> <a href='HW 2.html'>Next</a> >> HW 2</div>
         
     <!-- footer -->
       <div class="container">
