--- a/config/content_backup.htm
+++ b/config/content_backup.htm
@@ -158,6 +158,7 @@ cities[-2:-5:-1] #這個是切片操作 如果列印出來會是 ['Tokyo', 'Cape
 print (cities[::-1]) #列印 城市 [::-1]) ['Melbourne', 'Tokyo', 'Cape Town', 'Prague', 'San Diego']</pre>
 <p><em><span></span></em></p>
 <h2>w13</h2>
+<p>上課內容:<a href="https://mdecp2024.github.io/hw-41323204/content/Brython.html?src=https://gist.githubusercontent.com/41323204/cd3213c8d0dfe42054e216dc1641153f/raw/d7fdb516e9c62cacfc6b5c81acdd3473cd407676/w13%25E9%2587%258D%25E7%2596%258A%25E6%2596%25B9%25E5%25A1%258A.py">重疊方塊</a></p>
 <h1>HW 2</h1>
 <h4>主題: Python 的數列、判斷式與重複迴圈 (20%)<span style="background-color: #ffff99;"><br/></span></h4>
 <p style="padding-left: 30px;">Python 課程教材: <a href="https://www.learnpythonwithjupyter.com/">https://www.learnpythonwithjupyter.com/</a> - PART 2 and Part 3</p>
