--- a/config/content_backup.htm
+++ b/config/content_backup.htm
@@ -39,7 +39,42 @@
 <p>完成上述流程整理後, 請將 HW1 自評分數輸入 cp2024 自評表單中.</p>
 <h1>HW 1</h1>
 <h2>HW 1 Exam</h2>
-<h2>w11_hw</h2>
+<h3>w10</h3>
+<p>題目一</p>
+<p><span>操作:</span></p>
+<p><span>Brython</span></p>
+<p><span>1.複製程式一的原始碼</span></p>
+<p><span>2.到個人網站的Brython</span></p>
+<p><span>3.清除輸出區</span></p>
+<p><span>4.貼上程式一的原始碼</span></p>
+<p><span>5.Run</span></p>
+<p><span>SciTE 編輯器</span></p>
+<p><span>1.開啟SciTE 編輯器</span></p>
+<p><span>2.儲存檔案</span></p>
+<p><span>3.貼上程式一的原始碼</span></p>
+<p><span>4.Tool--Go</span></p>
+<p><span>命令提示字元視窗</span></p>
+<p><span>1.開啟命令提示字元視窗</span></p>
+<p><span>2.輸入cmd</span></p>
+<p><span>3.輸入python</span></p>
+<p><span>4.貼上程式一的原始碼</span></p>
+<p><span>Jupyter Lab</span></p>
+<p><span>1.開啟命令提示字元視窗</span></p>
+<p><span>2.輸入cd notebook</span></p>
+<p><span>3.輸入jupyter lab --collaborative</span></p>
+<p><span>4.進入Jupyter Lab網頁</span></p>
+<p><span>5.建立new launcher</span></p>
+<p><span>6.貼上程式一的原始碼</span></p>
+<p><span>7.執行</span></p>
+<p><span>Codespaces</span></p>
+<p><span>1.新增檔案 /檔案名稱.py</span></p>
+<p><span>2.安裝python模組</span></p>
+<p><span>3.新增終端機</span></p>
+<p><span>4.貼上程式一的原始碼</span></p>
+<p><span>5.輸入python exam.py</span></p>
+<p><span>6.執行</span></p>
+<p><span>心得:</span></p>
+<p><span></span></p><h2>w11_hw</h2>
 <p>每六人為一組進行協同程式練習</p>
 <p>透過 Jupyterlab 協同網頁, 輪流指定各組編寫 Topic 1 相關的程式練習, 以及網頁內容 (localhost 與 Codespaces 環境)編輯.</p>
 <h3>w7</h3>
@@ -158,7 +193,7 @@ cities[-2:-5:-1] #這個是切片操作 如果列印出來會是 ['Tokyo', 'Cape
 print (cities[::-1]) #列印 城市 [::-1]) ['Melbourne', 'Tokyo', 'Cape Town', 'Prague', 'San Diego']</pre>
 <p><em><span></span></em></p>
 <h2>w13</h2>
-<p>上課內容:<a href="https://mdecp2024.github.io/hw-41323204/content/Brython.html?src=https://gist.githubusercontent.com/41323204/cd3213c8d0dfe42054e216dc1641153f/raw/d7fdb516e9c62cacfc6b5c81acdd3473cd407676/w13%25E9%2587%258D%25E7%2596%258A%25E6%2596%25B9%25E5%25A1%258A.py">重疊方塊</a></p>
+<p>上課內容:<a href="https://mdecp2024.github.io/hw-41323204/content/Brython.html?src=https://gist.githubusercontent.com/41323204/cd3213c8d0dfe42054e216dc1641153f/raw/6eb75e7af190a5097b5bcc31bc80e06ee4a003e7/w13-2.py">重疊方塊</a></p><h3>w14_ex</h3>
 <h1>HW 2</h1>
 <h4>主題: Python 的數列、判斷式與重複迴圈 (20%)<span style="background-color: #ffff99;"><br/></span></h4>
 <p style="padding-left: 30px;">Python 課程教材: <a href="https://www.learnpythonwithjupyter.com/">https://www.learnpythonwithjupyter.com/</a> - PART 2 and Part 3</p>
@@ -166,8 +201,7 @@ print (cities[::-1]) #列印 城市 [::-1]) ['Melbourne', 'Tokyo', 'Cape Town', 
 <p>延續 HW 1 網頁資料整理與程式練習方法, 整理下列內容 (20%):</p>
 <p>PART 2: Introduction to lists and if/else statements</p>
 <p>PART 3: Introduction to the for loop</p>
-<p>完成上述流程整理後, 請將 HW2 自評分數輸入 cp2024 自評表單中.</p>
-<h2>HW 2 Exam</h2>
+<p>完成上述流程整理後, 請將 HW2 自評分數輸入 cp2024 自評表單中.</p><h2>HW 2 Exam</h2>
 <p>每六人為一組進行協同程式練習</p>
 <p>透過 Jupyterlab 協同網頁, 輪流指定各組編寫 HW 2 相關的程式練習, 以及網頁內容 (localhost 與 Codespaces 環境)編輯.</p>
 <h1>HW 3</h1>
