--- a/config/content.htm
+++ b/config/content.htm
@@ -39,7 +39,18 @@
 <p>完成上述流程整理後, 請將 HW1 自評分數輸入 cp2024 自評表單中.</p>
 <h1>HW 1</h1>
 <h2>HW 1 Exam</h2>
-<h2>w11_hw</h2>
+<h3>w10</h3>
+<p>題目一</p>
+<p><span>操作:</span></p>
+<p><span>Brython</span></p>
+<p><span>1.複製程式一的原始碼</span></p>
+<p><span>2.到個人網站的Brython</span></p>
+<p><span>3.清除輸出區</span></p>
+<p><span>4.貼上程式一的原始碼</span></p>
+<p><span>5.Run</span></p>
+<p><span></span></p>
+<p><span></span></p>
+<p><span></span></p><h2>w11_hw</h2>
 <p>每六人為一組進行協同程式練習</p>
 <p>透過 Jupyterlab 協同網頁, 輪流指定各組編寫 Topic 1 相關的程式練習, 以及網頁內容 (localhost 與 Codespaces 環境)編輯.</p>
 <h3>w7</h3>
@@ -158,15 +169,15 @@ cities[-2:-5:-1] #這個是切片操作 如果列印出來會是 ['Tokyo', 'Cape
 print (cities[::-1]) #列印 城市 [::-1]) ['Melbourne', 'Tokyo', 'Cape Town', 'Prague', 'San Diego']</pre>
 <p><em><span></span></em></p>
 <h2>w13</h2>
-<p>上課內容:<a href="https://mdecp2024.github.io/hw-41323204/content/Brython.html?src=https://gist.githubusercontent.com/41323204/cd3213c8d0dfe42054e216dc1641153f/raw/6eb75e7af190a5097b5bcc31bc80e06ee4a003e7/w13-2.py">重疊方塊</a></p><h1>HW 2</h1>
+<p>上課內容:<a href="https://mdecp2024.github.io/hw-41323204/content/Brython.html?src=https://gist.githubusercontent.com/41323204/cd3213c8d0dfe42054e216dc1641153f/raw/6eb75e7af190a5097b5bcc31bc80e06ee4a003e7/w13-2.py">重疊方塊</a></p><h3>w14_ex</h3>
+<h1>HW 2</h1>
 <h4>主題: Python 的數列、判斷式與重複迴圈 (20%)<span style="background-color: #ffff99;"><br/></span></h4>
 <p style="padding-left: 30px;">Python 課程教材: <a href="https://www.learnpythonwithjupyter.com/">https://www.learnpythonwithjupyter.com/</a> - PART 2 and Part 3</p>
 <hr/>
 <p>延續 HW 1 網頁資料整理與程式練習方法, 整理下列內容 (20%):</p>
 <p>PART 2: Introduction to lists and if/else statements</p>
 <p>PART 3: Introduction to the for loop</p>
-<p>完成上述流程整理後, 請將 HW2 自評分數輸入 cp2024 自評表單中.</p>
-<h2>HW 2 Exam</h2>
+<p>完成上述流程整理後, 請將 HW2 自評分數輸入 cp2024 自評表單中.</p><h2>HW 2 Exam</h2>
 <p>每六人為一組進行協同程式練習</p>
 <p>透過 Jupyterlab 協同網頁, 輪流指定各組編寫 HW 2 相關的程式練習, 以及網頁內容 (localhost 與 Codespaces 環境)編輯.</p>
 <h1>HW 3</h1>
