--- a/content/w10.html
+++ b/content/w10.html
@@ -2,7 +2,7 @@
         <head>
         <title>cp_hw</title>
         <meta charset="utf-8">
-<meta property="head" content="H1">
+<meta property="head" content="H3">
         <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
         <link rel="stylesheet" href="./../cmsimde/static/chimper/fonts/icomoon/style.css">
         <link rel="stylesheet" href="./../cmsimde/static/chimper/css/bootstrap.min.css">
@@ -141,20 +141,18 @@ img.add_border {
           </div>
           
         </header>
-    <div id="tipue_search_content">HW 4 Exam << <a href='HW 4 Exam.html'>Previous</a> <a href='Brython.html'>Next</a> >> Brython<br /><h1>Final Report</h1>
-<p>期末口頭與書面專題報告 (20%)</p>
-<p>期末口頭專題報告影片:</p>
-<p style="padding-left: 30px;">......</p>
-<p>期末書面專題報告檔案 (pdf):</p>
-<p style="padding-left: 30px;">......</p>
-<p>電腦輔助設計與實習課程總結心得:</p>
-<p style="padding-left: 30px;">......</p>
-<p>期末報告自評成績:</p>
-<p style="padding-left: 30px;">完成上述流程後, 請將 Final Report 自評分數輸入 cp2024 自評表單中.</p>
-<p>
-<script src="https://unpkg.com/three@0.144.0/build/three.js" type="text/javascript"></script>
-</p>
-<br />HW 4 Exam << <a href='HW 4 Exam.html'>Previous</a> <a href='Brython.html'>Next</a> >> Brython</div>
+    <div id="tipue_search_content">HW 1 Exam << <a href='HW 1 Exam.html'>Previous</a> <a href='w11_hw.html'>Next</a> >> w11_hw<br /><h1>w10</h1>
+<p>題目一</p>
+<p><span>操作:</span></p>
+<p><span>Brython</span></p>
+<p><span>1.複製程式一的原始碼</span></p>
+<p><span>2.到個人網站的Brython</span></p>
+<p><span>3.清除輸出區</span></p>
+<p><span>4.貼上程式一的原始碼</span></p>
+<p><span>5.Run</span></p>
+<p><span></span></p>
+<p><span></span></p>
+<p><span></span></p><br />HW 1 Exam << <a href='HW 1 Exam.html'>Previous</a> <a href='w11_hw.html'>Next</a> >> w11_hw</div>
         
     <!-- footer -->
       <div class="container">
