--- a/content/w10.html
+++ b/content/w10.html
@@ -155,6 +155,11 @@ img.add_border {
 <p><span>2.儲存檔案</span></p>
 <p><span>3.貼上程式一的原始碼</span></p>
 <p><span>4.Tool--Go</span></p>
+<p><span>命令提示字元視窗</span></p>
+<p><span>1.開啟命令提示字元視窗</span></p>
+<p><span>2.輸入cmd</span></p>
+<p><span>3.輸入python</span></p>
+<p><span>4.貼上程式一的原始碼</span></p>
 <p><span></span></p>
 <p><span></span></p>
 <p><span></span></p><br />HW 1 Exam << <a href='HW 1 Exam.html'>Previous</a> <a href='w11_hw.html'>Next</a> >> w11_hw</div>
