--- a/config/content.htm
+++ b/config/content.htm
@@ -66,6 +66,13 @@
 <p><span>5.建立new launcher</span></p>
 <p><span>6.貼上程式一的原始碼</span></p>
 <p><span>7.執行</span></p>
+<p><span>Codespaces</span></p>
+<p><span>1.新增檔案 /檔案名稱.py</span></p>
+<p><span>2.安裝python模組</span></p>
+<p><span>3.新增終端機</span></p>
+<p><span>4.貼上程式一的原始碼</span></p>
+<p><span>5.輸入python exam.py</span></p>
+<p><span>6.執行</span></p>
 <p><span></span></p>
 <p><span></span></p>
 <p><span></span></p><h2>w11_hw</h2>
