--- a/content/w10.html
+++ b/content/w10.html
@@ -178,6 +178,9 @@ img.add_border {
 <p>操作影片:<iframe allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen="allowfullscreen" frameborder="0" height="315" referrerpolicy="strict-origin-when-cross-origin" src="https://www.youtube.com/embed/fHQTkMyU6MI?si=_ff75-DIeE5m_OM4" title="YouTube video player" width="560"></iframe></p>
 <p><span>心得:</span></p>
 <p><span>透過這次測驗我使用了5種工具寫程式，讓我了解到就算其中一種不能或不會使用，還是有很多其他的工具可以用。</span></p>
+<p><span>題目二</span></p>
+<div><span>請問 Python 程式中有關變數的命名, 除了必須以"_", 以及英文大小寫字母開頭之外, 還有甚麼需要特別注意的地方?</span></div>
+<div><span>與所謂的"關鍵字"(<a href="https://mdecp2024.github.io/hw-41323204/content/Brython.html?src=https://gist.githubusercontent.com/41323204/b0ef0df58be9db79e1ff95cfb6d3594d/raw/1b5c1a3e2c264654d24e86b08880f81bd8823b27/w10-2.py">keywords</a>)</span><span>有關係嗎?</span></div>
 <p><span></span></p>
 <p><span></span></p><br />HW 1 Exam << <a href='HW 1 Exam.html'>Previous</a> <a href='w11_hw.html'>Next</a> >> w11_hw</div>
         
