--- a/config/content_backup.htm
+++ b/config/content_backup.htm
@@ -74,7 +74,11 @@
 <p><span>5.輸入python exam.py</span></p>
 <p><span>6.執行</span></p>
 <p>操作影片:<iframe allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen="allowfullscreen" frameborder="0" height="315" referrerpolicy="strict-origin-when-cross-origin" src="https://www.youtube.com/embed/fHQTkMyU6MI?si=_ff75-DIeE5m_OM4" title="YouTube video player" width="560"></iframe></p>
-<p><span></span></p>
+<p><span>心得:</span></p>
+<p><span>透過這次測驗我使用了5種工具寫程式，讓我了解到就算其中一種不能或不會使用，還是有很多其他的工具可以用。</span></p>
+<p><span>題目二</span></p>
+<div><span>請問 Python 程式中有關變數的命名, 除了必須以"_", 以及英文大小寫字母開頭之外, 還有甚麼需要特別注意的地方?</span></div>
+<div><span>與所謂的"關鍵字"(keywords)</span><span>有關係嗎?</span></div>
 <p><span></span></p>
 <p><span></span></p><h2>w11_hw</h2>
 <p>每六人為一組進行協同程式練習</p>
