--- a/config/content_backup.htm
+++ b/config/content_backup.htm
@@ -78,7 +78,17 @@
 <p><span>透過這次測驗我使用了5種工具寫程式，讓我了解到就算其中一種不能或不會使用，還是有很多其他的工具可以用。</span></p>
 <p><span>題目二</span></p>
 <div><span>請問 Python 程式中有關變數的命名, 除了必須以"_", 以及英文大小寫字母開頭之外, 還有甚麼需要特別注意的地方?</span></div>
-<div><span>與所謂的"關鍵字"(keywords)</span><span>有關係嗎?</span></div>
+<div><span>與所謂的"關鍵字"(<a href="https://mdecp2024.github.io/hw-41323204/content/Brython.html?src=https://gist.githubusercontent.com/41323204/b0ef0df58be9db79e1ff95cfb6d3594d/raw/1b5c1a3e2c264654d24e86b08880f81bd8823b27/w10-2.py">keywords</a>)</span><span>有關係嗎?</span></div>
+<div>
+<div>Answer:</div>
+<div>1.不可以用數字開頭，變數名稱的第一個字母必須是大小寫英文字母 。</div>
+<div>2.變數名稱不能與Python關鍵字或函式名稱相同。<span>關鍵</span><span>字如print、def、if、else、for 等等，原本就是在Python中會被使用到的，不能被拿來作為變數的名稱。</span></div>
+<div><span></span></div>
+<div><span>請實際舉例, 針對 Python 程式命名的規則編寫程式, 並採上一題的五種程式執行方法, 展示正確變數命名與違反變數命名時, 所顯示的錯誤訊息回應.</span></div>
+<div><span></span></div>
+<div><span></span></div>
+<div><span>操作影片如下:123456</span></div>
+</div>
 <p><span></span></p>
 <p><span></span></p><h2>w11_hw</h2>
 <p>每六人為一組進行協同程式練習</p>
