--- a/config/content_backup.htm
+++ b/config/content_backup.htm
@@ -87,7 +87,7 @@
 <div><span>請實際舉例, 針對 Python 程式命名的規則編寫程式, 並採上一題的五種程式執行方法, 展示正確變數命名與違反變數命名時, 所顯示的錯誤訊息回應.</span></div>
 <div><span></span></div>
 <div><span></span></div>
-<div><span>操作影片如下:123456</span></div>
+<div><span>操作影片如下:<iframe allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen="allowfullscreen" frameborder="0" height="315" referrerpolicy="strict-origin-when-cross-origin" src="https://www.youtube.com/embed/RCmQ_3b69zY?si=yJhscmhfN14ulO2d" title="YouTube video player" width="560"></iframe></span></div>
 </div>
 <p><span></span></p>
 <p><span></span></p><h2>w11_hw</h2>
@@ -209,6 +209,7 @@ cities[-2:-5:-1] #這個是切片操作 如果列印出來會是 ['Tokyo', 'Cape
 print (cities[::-1]) #列印 城市 [::-1]) ['Melbourne', 'Tokyo', 'Cape Town', 'Prague', 'San Diego']</pre>
 <p><em><span></span></em></p>
 <h2>w13</h2>
+<h3>w13_hw</h3>
 <p>上課內容:<a href="https://mdecp2024.github.io/hw-41323204/content/Brython.html?src=https://gist.githubusercontent.com/41323204/cd3213c8d0dfe42054e216dc1641153f/raw/6eb75e7af190a5097b5bcc31bc80e06ee4a003e7/w13-2.py">重疊方塊</a></p><h3>w14_ex</h3>
 <h1>HW 2</h1>
 <h4>主題: Python 的數列、判斷式與重複迴圈 (20%)<span style="background-color: #ffff99;"><br/></span></h4>
