--- a/config/content.htm
+++ b/config/content.htm
@@ -209,7 +209,9 @@ cities[-2:-5:-1] #這個是切片操作 如果列印出來會是 ['Tokyo', 'Cape
 print (cities[::-1]) #列印 城市 [::-1]) ['Melbourne', 'Tokyo', 'Cape Town', 'Prague', 'San Diego']</pre>
 <p><em><span></span></em></p>
 <h2>w13</h2>
-<p>上課內容:<a href="https://mdecp2024.github.io/hw-41323204/content/Brython.html?src=https://gist.githubusercontent.com/41323204/cd3213c8d0dfe42054e216dc1641153f/raw/6eb75e7af190a5097b5bcc31bc80e06ee4a003e7/w13-2.py">重疊方塊</a></p><h3>w14_ex</h3>
+<h3>w13_hw</h3>
+<p>上課內容:<a href="https://mdecp2024.github.io/hw-41323204/content/Brython.html?src=https://gist.githubusercontent.com/41323204/cd3213c8d0dfe42054e216dc1641153f/raw/6eb75e7af190a5097b5bcc31bc80e06ee4a003e7/w13-2.py">重疊方塊</a></p>
+<p>1.<a href="https://mdecp2024.github.io/hw-41323204/content/Brython.html?src=https://gist.githubusercontent.com/41323204/f1ba7ac05f423a5cc3364389bbf4ef42/raw/5b21230ff1545511ff7eb87dcbbbbda429eeb668/w13-1.py">繪製兩個紅色正方形及對角線</a></p><h3>w14_ex</h3>
 <h1>HW 2</h1>
 <h4>主題: Python 的數列、判斷式與重複迴圈 (20%)<span style="background-color: #ffff99;"><br/></span></h4>
 <p style="padding-left: 30px;">Python 課程教材: <a href="https://www.learnpythonwithjupyter.com/">https://www.learnpythonwithjupyter.com/</a> - PART 2 and Part 3</p>
