--- a/content/w11.html
+++ b/content/w11.html
@@ -2,7 +2,7 @@
         <head>
         <title>cp_hw</title>
         <meta charset="utf-8">
-<meta property="head" content="H3">
+<meta property="head" content="H2">
         <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
         <link rel="stylesheet" href="./../cmsimde/static/chimper/fonts/icomoon/style.css">
         <link rel="stylesheet" href="./../cmsimde/static/chimper/css/bootstrap.min.css">
@@ -130,7 +130,7 @@ img.add_border {
                             <li><a href="./../blog/index.html">blog</a></li>
                         </ul>
                       </li>
-                     <li><a href='About.html'>About</a><li><a href='Attendance.html'>Attendance</a><li class='has-children'><a href='HW 1.html'>HW 1</a><ul class='dropdown'><li class='has-children'><a href='HW 1 Exam.html'>HW 1 Exam</a><ul class='dropdown'><li><a href='w10.html'>w10</a></li></ul><li class='has-children'><a href='w11_hw.html'>w11_hw</a><ul class='dropdown'><li><a href='w7.html'>w7</a><li><a href='w11.html'>w11</a></li></ul><li class='has-children'><a href='w12.html'>w12</a><ul class='dropdown'><li><a href='w12_hw.html'>w12_hw</a></li></ul><li class='has-children'><a href='w13.html'>w13</a><ul class='dropdown'><li><a href='w13_hw.html'>w13_hw</a><li><a href='w14_ex.html'>w14_ex</a></li></li></ul></ul><li class='has-children'><a href='HW 2.html'>HW 2</a><ul class='dropdown'><li><a href='HW 2 Exam.html'>HW 2 Exam</a></li></ul><li class='has-children'><a href='HW 3.html'>HW 3</a><ul class='dropdown'><li class='has-children'><a href='HW 3 Exam.html'>HW 3 Exam</a><ul class='dropdown'><li><a href='w8.html'>w8</a><li><a href='week7.html'>week7</a></li></li></ul></ul><li class='has-children'><a href='HW 4.html'>HW 4</a><ul class='dropdown'><li><a href='HW 4 Exam.html'>HW 4 Exam</a></li></ul><li><a href='Final Report.html'>Final Report</a><li><a href='Brython.html'>Brython</a></li>
+                     <li><a href='About.html'>About</a><li><a href='Attendance.html'>Attendance</a><li class='has-children'><a href='HW 1.html'>HW 1</a><ul class='dropdown'><li class='has-children'><a href='HW 1 Exam.html'>HW 1 Exam</a><ul class='dropdown'><li><a href='w10.html'>w10</a></li></ul><li class='has-children'><a href='w11.html'>w11</a><ul class='dropdown'><li><a href='w7.html'>w7</a><li><a href='w11_hw.html'>w11_hw</a></li></ul><li class='has-children'><a href='w12.html'>w12</a><ul class='dropdown'><li><a href='w12_hw.html'>w12_hw</a></li></ul><li class='has-children'><a href='w13.html'>w13</a><ul class='dropdown'><li><a href='w13_hw.html'>w13_hw</a><li><a href='w14_ex.html'>w14_ex</a></li></li></ul></ul><li class='has-children'><a href='HW 2.html'>HW 2</a><ul class='dropdown'><li><a href='HW 2 Exam.html'>HW 2 Exam</a></li></ul><li class='has-children'><a href='HW 3.html'>HW 3</a><ul class='dropdown'><li class='has-children'><a href='HW 3 Exam.html'>HW 3 Exam</a><ul class='dropdown'><li><a href='w8.html'>w8</a><li><a href='week7.html'>week7</a></li></li></ul></ul><li class='has-children'><a href='HW 4.html'>HW 4</a><ul class='dropdown'><li><a href='HW 4 Exam.html'>HW 4 Exam</a></li></ul><li><a href='Final Report.html'>Final Report</a><li><a href='Brython.html'>Brython</a></li>
                       </ul>
                 </nav>
               </div>
@@ -141,26 +141,10 @@ img.add_border {
           </div>
           
         </header>
-    <div id="tipue_search_content">w7 << <a href='w7.html'>Previous</a> <a href='w12.html'>Next</a> >> w12<br /><h1>w11</h1>
-<p>以下影片說明如何利用近端可攜系統維護個人作業網站:</p>
-<p>標記</p>
-<p>1.  已知可以用 Python 程式<a href="https://mde.tw/cp2024/content/Brython.html?src=https://gist.githubusercontent.com/mdecycu/5e6eda7a004c15fa7262b9a80bfa4af6/raw/c2225ac22f32ee8485a630b42cf3f4d8567bb661/up_to_down_pyramid.py">由上往下列印三角形 *</a>, 或<a href="https://mde.tw/cp2024/content/Brython.html?src=https://gist.githubusercontent.com/mdecycu/5e6eda7a004c15fa7262b9a80bfa4af6/raw/56793c72d4495d564e3cc6214ed5fb68dbd2b21d/left_to_right_pyramid.py">由左往右列印三角形 *</a>, 請將此程式延伸到可以在 10x10 的字元區域中, 以 "*" 字元列印出圓型區域. 完成後請將程式碼存入個人 Gist 後, 直接在個人作業網站中的 Brython 頁面中執行. (提示: ?src=gist_script_URL)</p>
-<p>第一題解答：“<a href="https://mdecp2024.github.io/hw-41323204/content/Brython.html?src=https://gist.githubusercontent.com/41323204/9c0099107110ebabaa5eec94f3f3b9e8/raw/94079fad8c89e95c85ad844f8851f486eed1c5df/hw11.2.py">星號圓</a>”</p>
-<p></p>
-<p></p>
-<p></p>
-<p></p>
-<p>2. 已知可以在網頁中利用 Brython 繪製方格與塗色, 如下連結, 請設法修改此一程式, 直接將程式存入個人的 Gist, 並利用黑色方塊圍出一個圓形區域.</p>
-<p>第二題解答：“<a href="https://mdecp2024.github.io/hw-41323204/content/Brython.html?src=https://gist.githubusercontent.com/41323204/9c0099107110ebabaa5eec94f3f3b9e8/raw/94079fad8c89e95c85ad844f8851f486eed1c5df/hw11-2.py">格子圓</a>”</p>
-<p><a href="https://mde.tw/cp2024/content/Brython.html?src=https://gist.githubusercontent.com/mdecycu/5705fc2a67aa1db0c0d44d6d0478b08b/raw/f95909804a1f134963cade8463eeb9bd32129ea8/grid_line_and_fill_in_Brython.py">網頁上的方格與塗色</a></p>
-<p>3. 完成上列題目後, 請利用 Youtube 影片<span>簡報</span>個人的解題過程與心得.</p>
-<p>第一題解題過程：</p>
-<p><iframe allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen="allowfullscreen" frameborder="0" height="315" referrerpolicy="strict-origin-when-cross-origin" src="https://www.youtube.com/embed/S9Lho0gKjOA?si=RFRtWlNyqMRBG51l" title="YouTube video player" width="560"></iframe></p>
-<p>第二題解題過程：</p>
-<p><iframe allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen="allowfullscreen" frameborder="0" height="315" referrerpolicy="strict-origin-when-cross-origin" src="https://www.youtube.com/embed/S9Lho0gKjOA?si=RFRtWlNyqMRBG51l" title="YouTube video player" width="560"></iframe></p>
-<p>11/27課堂練習1:"<a href="https://mdecp2024.github.io/hw-41323204/content/Brython.html?src=https://gist.githubusercontent.com/41323204/e7c106049c6e2022e165230b2479e0ba/raw/0c9483e40732b9f0aff437ae01d7a49ed83fc4a4/hw12-p">這裡</a>"</p>
-<p>        課堂練習2:"<a href="https://mdecp2024.github.io/hw-41323204/content/Brython.html?src=https://gist.githubusercontent.com/41323204/5e29e17007686fe907a5851c8e71a4c1/raw/7518b66a6b9efdf6a0a3a2af277cde80a5eb8c8a/w11%25E6%25A3%258B%25E7%259B%25A4.py">棋盤</a>"</p>
-<br />w7 << <a href='w7.html'>Previous</a> <a href='w12.html'>Next</a> >> w12</div>
+    <div id="tipue_search_content">w10 << <a href='w10.html'>Previous</a> <a href='w7.html'>Next</a> >> w7<br /><h1>w11</h1>
+<p>每六人為一組進行協同程式練習</p>
+<p>透過 Jupyterlab 協同網頁, 輪流指定各組編寫 Topic 1 相關的程式練習, 以及網頁內容 (localhost 與 Codespaces 環境)編輯.</p>
+<br />w10 << <a href='w10.html'>Previous</a> <a href='w7.html'>Next</a> >> w7</div>
         
     <!-- footer -->
       <div class="container">
