--- a/config/content_backup.htm
+++ b/config/content_backup.htm
@@ -90,7 +90,8 @@
 <div><span>操作影片如下:<iframe allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen="allowfullscreen" frameborder="0" height="315" referrerpolicy="strict-origin-when-cross-origin" src="https://www.youtube.com/embed/RCmQ_3b69zY?si=yJhscmhfN14ulO2d" title="YouTube video player" width="560"></iframe></span></div>
 </div>
 <p><span></span></p>
-<p><span></span></p><h2>w11_hw</h2>
+<p><span></span></p>
+<h2>w11_hw</h2>
 <p>每六人為一組進行協同程式練習</p>
 <p>透過 Jupyterlab 協同網頁, 輪流指定各組編寫 Topic 1 相關的程式練習, 以及網頁內容 (localhost 與 Codespaces 環境)編輯.</p>
 <h3>w7</h3>
@@ -117,8 +118,8 @@
 <p><iframe allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen="allowfullscreen" frameborder="0" height="315" referrerpolicy="strict-origin-when-cross-origin" src="https://www.youtube.com/embed/S9Lho0gKjOA?si=RFRtWlNyqMRBG51l" title="YouTube video player" width="560"></iframe></p>
 <p>11/27課堂練習1:"<a href="https://mdecp2024.github.io/hw-41323204/content/Brython.html?src=https://gist.githubusercontent.com/41323204/e7c106049c6e2022e165230b2479e0ba/raw/0c9483e40732b9f0aff437ae01d7a49ed83fc4a4/hw12-p">這裡</a>"</p>
 <p>        課堂練習2:"<a href="https://mdecp2024.github.io/hw-41323204/content/Brython.html?src=https://gist.githubusercontent.com/41323204/5e29e17007686fe907a5851c8e71a4c1/raw/7518b66a6b9efdf6a0a3a2af277cde80a5eb8c8a/w11%25E6%25A3%258B%25E7%259B%25A4.py">棋盤</a>"</p>
-<h2>w12_hw</h2>
-<h3>w12</h3>
+<h2>w12</h2>
+<h3>w12_hw</h3>
 <p><em>第一題：input()與 print()</em></p>
 <p><em>範例:<a href="https://mdecp2024.github.io/hw-41323204/content/Brython.html?src=https://gist.githubusercontent.com/41323204/df92358b984c289ab1758215f9496a12/raw/9b3cdafc23f4b2f5c869e20119829369e0cee787/hw12-1.py">你的名字</a></em></p>
 <p><em><span>    說明：input為輸入()中為問題,使用者輸入之答案會變成返回的值</span></em></p>
@@ -213,15 +214,18 @@ print (cities[::-1]) #列印 城市 [::-1]) ['Melbourne', 'Tokyo', 'Cape Town', 
 <p>上課內容:<a href="https://mdecp2024.github.io/hw-41323204/content/Brython.html?src=https://gist.githubusercontent.com/41323204/cd3213c8d0dfe42054e216dc1641153f/raw/6eb75e7af190a5097b5bcc31bc80e06ee4a003e7/w13-2.py">重疊方塊</a></p>
 <p>1.<a href="https://mdecp2024.github.io/hw-41323204/content/Brython.html?src=https://gist.githubusercontent.com/41323204/f1ba7ac05f423a5cc3364389bbf4ef42/raw/5b21230ff1545511ff7eb87dcbbbbda429eeb668/w13-1.py">繪製兩個紅色正方形及對角線</a></p>
 <p></p>
-<p>2.<a href="https://mdecp2024.github.io/hw-41323204/content/Brython.html?src=https://gist.githubusercontent.com/41323204/f1ba7ac05f423a5cc3364389bbf4ef42/raw/4e713beb758d844b5ac162f7d6644210af5b13a7/13-2.py">加上外切圓</a></p><h3>w14_ex</h3>
-<p>1.<a href="https://mdecp2024.github.io/hw-41323204/content/Brython.html?src=https://gist.githubusercontent.com/41323204/74481132346db9ea98a556f202f4f770/raw/7b45d30dab7c2c8bf0346e556e796dc48c9f1a55/w14.py">三圓塗色</a></p><h1>HW 2</h1>
+<p>2.<a href="https://mdecp2024.github.io/hw-41323204/content/Brython.html?src=https://gist.githubusercontent.com/41323204/f1ba7ac05f423a5cc3364389bbf4ef42/raw/4e713beb758d844b5ac162f7d6644210af5b13a7/13-2.py">加上外切圓</a></p>
+<h3>w14_ex</h3>
+<p>1.<a href="https://mdecp2024.github.io/hw-41323204/content/Brython.html?src=https://gist.githubusercontent.com/41323204/74481132346db9ea98a556f202f4f770/raw/7b45d30dab7c2c8bf0346e556e796dc48c9f1a55/w14.py">三圓塗色</a></p>
+<h1>HW 2</h1>
 <h4>主題: Python 的數列、判斷式與重複迴圈 (20%)<span style="background-color: #ffff99;"><br/></span></h4>
 <p style="padding-left: 30px;">Python 課程教材: <a href="https://www.learnpythonwithjupyter.com/">https://www.learnpythonwithjupyter.com/</a> - PART 2 and Part 3</p>
 <hr/>
 <p>延續 HW 1 網頁資料整理與程式練習方法, 整理下列內容 (20%):</p>
 <p>PART 2: Introduction to lists and if/else statements</p>
 <p>PART 3: Introduction to the for loop</p>
-<p>完成上述流程整理後, 請將 HW2 自評分數輸入 cp2024 自評表單中.</p><h2>HW 2 Exam</h2>
+<p>完成上述流程整理後, 請將 HW2 自評分數輸入 cp2024 自評表單中.</p>
+<h2>HW 2 Exam</h2>
 <p>每六人為一組進行協同程式練習</p>
 <p>透過 Jupyterlab 協同網頁, 輪流指定各組編寫 HW 2 相關的程式練習, 以及網頁內容 (localhost 與 Codespaces 環境)編輯.</p>
 <h1>HW 3</h1>
