--- a/config/content.htm
+++ b/config/content.htm
@@ -219,7 +219,9 @@ print (cities[::-1]) #列印 城市 [::-1]) ['Melbourne', 'Tokyo', 'Cape Town', 
 <p>1.<a href="https://mdecp2024.github.io/hw-41323204/content/Brython.html?src=https://gist.githubusercontent.com/41323204/74481132346db9ea98a556f202f4f770/raw/7b45d30dab7c2c8bf0346e556e796dc48c9f1a55/w14.py">三圓塗色</a></p>
 <h3>w15</h3>
 <p><span>題目一: 請利用 Gist 與 Brython 程式環境, 在個人的課程網站中新增一個頁面, 標題為 w15, 以"從 1 累加到 100"作為 anchor 的連結標題, 使用者點擊該連結之後, 可從各自的 Brython 頁面執行程式.</span></p>
-<p>Ans:<a href="https://mdecp2024.github.io/hw-41323204/content/Brython.html?src=https://gist.githubusercontent.com/41323204/4280c12a61c421bd1b2973ec3a585d47/raw/2add5264cb34d8029eac8a634ebafde72b1db448/15-1.py">1加到100</a></p><h1>HW 2</h1>
+<p>Ans:<a href="https://mdecp2024.github.io/hw-41323204/content/Brython.html?src=https://gist.githubusercontent.com/41323204/4280c12a61c421bd1b2973ec3a585d47/raw/2add5264cb34d8029eac8a634ebafde72b1db448/15-1.py">1加到100</a></p>
+<p>題目二:延伸上題，設計一個函式 addto(1, 100),可以完成上述的累加結果</p>
+<p>Ans:<a href="https://mdecp2024.github.io/hw-41323204/content/Brython.html?src=https://gist.githubusercontent.com/41323204/4280c12a61c421bd1b2973ec3a585d47/raw/504af7d88fbb00bf6b28e5f1a67cd7bb2068641c/15-2.py">addto</a></p><h1>HW 2</h1>
 <h4>主題: Python 的數列、判斷式與重複迴圈 (20%)<span style="background-color: #ffff99;"><br/></span></h4>
 <p style="padding-left: 30px;">Python 課程教材: <a href="https://www.learnpythonwithjupyter.com/">https://www.learnpythonwithjupyter.com/</a> - PART 2 and Part 3</p>
 <hr/>
