--- a/content/w16_exam2.html
+++ b/content/w16_exam2.html
@@ -141,11 +141,7 @@ img.add_border {
           </div>
           
         </header>
-    <div id="tipue_search_content">w14_ex << <a href='w14_ex.html'>Previous</a> <a href='HW 2.html'>Next</a> >> HW 2<br /><h1>w15</h1>
-<p><span>題目一: 請利用 Gist 與 Brython 程式環境, 在個人的課程網站中新增一個頁面, 標題為 w15, 以"從 1 累加到 100"作為 anchor 的連結標題, 使用者點擊該連結之後, 可從各自的 Brython 頁面執行程式.</span></p>
-<p>Ans:<a href="https://mdecp2024.github.io/hw-41323204/content/Brython.html?src=https://gist.githubusercontent.com/41323204/4280c12a61c421bd1b2973ec3a585d47/raw/2add5264cb34d8029eac8a634ebafde72b1db448/15-1.py">1加到100</a></p>
-<p>題目二:延伸上題，設計一個函式 addto(1, 100),可以完成上述的累加結果</p>
-<p>Ans:<a href="https://mdecp2024.github.io/hw-41323204/content/Brython.html?src=https://gist.githubusercontent.com/41323204/4280c12a61c421bd1b2973ec3a585d47/raw/504af7d88fbb00bf6b28e5f1a67cd7bb2068641c/15-2.py">addto</a></p><br />w14_ex << <a href='w14_ex.html'>Previous</a> <a href='HW 2.html'>Next</a> >> HW 2</div>
+    <div id="tipue_search_content">HW 3 Exam << <a href='HW 3 Exam.html'>Previous</a> <a href='w8.html'>Next</a> >> w8<br /><h1>w16_exam2</h1><br />HW 3 Exam << <a href='HW 3 Exam.html'>Previous</a> <a href='w8.html'>Next</a> >> w8</div>
         
     <!-- footer -->
       <div class="container">
