--- a/content/w16_exam2.html
+++ b/content/w16_exam2.html
@@ -244,7 +244,8 @@ if __name__ == "__main__":
     label_coordinate(ctx, offset_x, offset_y, text_angle)
 </pre>
 <p><img alt="" height="602" src="./../images/2025-01-08 (2).png" width="580"/></p>
-<p><a href="https://mdecp2024.github.io/hw-41323204/content/Brython.html?src=https://gist.githubusercontent.com/41323204/4a4f0eb006e5752ef4a75016ed591595/raw/d8e6a3962574d7ef6994c90affb7bb6b117aa806/w16-2">exam2</a></p><br />HW 3 Exam << <a href='HW 3 Exam.html'>Previous</a> <a href='w8.html'>Next</a> >> w8</div>
+<p><a href="https://mdecp2024.github.io/hw-41323204/content/Brython.html?src=https://gist.githubusercontent.com/41323204/4a4f0eb006e5752ef4a75016ed591595/raw/d8e6a3962574d7ef6994c90affb7bb6b117aa806/w16-2">exam2</a></p>
+<p><iframe allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen="allowfullscreen" frameborder="0" height="315" referrerpolicy="strict-origin-when-cross-origin" src="https://www.youtube.com/embed/2im63JL-tZk?si=HxE0HthpUJLpekFm" title="YouTube video player" width="560"></iframe></p><br />HW 3 Exam << <a href='HW 3 Exam.html'>Previous</a> <a href='w8.html'>Next</a> >> w8</div>
         
     <!-- footer -->
       <div class="container">
